--- a/Views/Projects/Index.cshtml
+++ b/Views/Projects/Index.cshtml
@@ -28,7 +28,7 @@
                 {
                     @foreach (var employee in project.EmployeeId)
                     {
-                            <a href="Employees?id=@employee.Id">@employee.Telegram <br /></a>
+                            <a href="Employees/Index/@employee.Telegram">@employee.Telegram <br /></a>
                     }
                 
                 }
