--- a/Views/Projects/Index.cshtml
+++ b/Views/Projects/Index.cshtml
@@ -44,7 +44,7 @@
                 {
                     @foreach(var request in project.RequestId)
                     {
-                        @request.Telegram <br/>
+                            <a href="Employees/index/@request.Telegram">@request.Telegram <br /></a>
                     }
                 }
             </td>
