--- a/Views/Auth/Index.cshtml
+++ b/Views/Auth/Index.cshtml
@@ -6,11 +6,35 @@
 <!DOCTYPE html>
 <html>
 <head>
+
+    <style>
+        ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            width: 200px;
+            background-color: #f1f1f1;
+        }
+
+        li a {
+            display: block;
+            color: #000;
+            padding: 8px 16px;
+            text-decoration: none;
+        }
+
+            /* Change the link color on hover */
+            li a:hover {
+                background-color: #555;
+                color: white;
+            }
+    </style>
+
     <title>DevScience</title>
     <meta charset="utf-8" />
 </head>
 <body>
-    <h1><a href="Home">Home</a></h1>
+    <ul><li><a href="Home">Home</a></li></ul>
     <h2>Please login:</h2>
     <form method="post">
         <label>Login:</label><br />
